Fix image spacing

--- a/themes/mm/sass/main.scss
+++ b/themes/mm/sass/main.scss
@@ -181,6 +181,7 @@ kbd {
 
   img {
     @extend .img-fluid;
+    margin-bottom: $spacer;
   }
 }
 
